# editorconfiger

./: Cargo.toml  README.md  build.rs  cliff.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: ci.yml  release.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare.rs  glob.rs  validate.rs
src/: console.rs  editorconfig.rs  editorconfig_lexer.rs  editorconfig_parser.rs  enumerable.rs  file_iterator.rs  file_parser.rs  glob.lalrpop  glob.rs  ini_parser.rs  lib.rs  main.rs  parser.rs  sect.rs  section.lalrpop  similar.rs
src/editorconfig/: lexer.rs  mod.rs
src/glb/: interpreter.rs  lexer.rs  mod.rs
