[package]
name = "editorconfiger"
version = "0.4.3"
description = "Plain tool to validate and compare .editorconfig files"
authors = ["egoroff <egoroff@gmail.com>"]
keywords = ["editorconfig"]
homepage = "https://github.com/aegoroff/editorconfiger"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "=0.20.0"

[dependencies]
lalrpop-util  = { version = "=0.20.0", features = ["lexer"] }
regex = "=1.9.5"
jwalk = "=0.8.1"
aho-corasick = "=1.1.1"
nom = "=7.1.3"
num_cpus = "=1.16.0"

ansi_term = { version = "=0.12.1", optional = true }
prettytable-rs = { version = "=0.10.0", optional = true }
clap = { version = "=4.4.5", features = ["std", "color", "suggestions", "cargo"], optional = true }
clap_complete = { version = "=4.4.3", optional = true }

[dev-dependencies]
table-test = "=0.2.1"
rstest = "=0.18.2"

[features]
build-binary = ["clap", "clap_complete", "ansi_term", "prettytable-rs"]

[[bin]]
name = "editorconfiger"
required-features = ["build-binary"]

[profile.release]
lto = true
strip = true
panic = 'abort'

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/editorconfiger", dest = "/usr/bin/editorconfiger", mode = "0755" },
]
