[package]
name = "editorconfiger"
version = "0.4.10"
description = "Plain tool to validate and compare .editorconfig files"
authors = ["egoroff <egoroff@gmail.com>"]
keywords = ["editorconfig"]
repository = "https://github.com/aegoroff/editorconfiger"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "=0.22.0"

[dependencies]
lalrpop-util  = { version = "=0.22.0", features = ["lexer", "unicode"] }
regex = "=1.11.1"
jwalk = "=0.8.1"
aho-corasick = "=1.1.3"
nom = "=7.1.3"
num_cpus = "=1.16.0"

ansi_term = { version = "=0.12.1", optional = true }
prettytable-rs = { version = "=0.10.0", optional = true }
clap = { version = "=4.5.23", features = ["std", "color", "suggestions", "cargo"], optional = true }
clap_complete = { version = "=4.5.38", optional = true }


[dev-dependencies]
table-test = "=0.2.1"
rstest = "=0.23.0"

[features]
build-binary = ["clap", "clap_complete", "ansi_term", "prettytable-rs"]

[[bin]]
name = "editorconfiger"
required-features = ["build-binary"]

[profile.release]
lto = true
strip = true
panic = 'abort'

[package.metadata.deb]
assets = [
    ["target/release/editorconfiger", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/editorconfiger", dest = "/usr/bin/editorconfiger", mode = "0755" },
]

[lints.rust]
unsafe_code = "forbid"
